--- a/client/index.html
+++ b/client/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Karthik - Your AI</title>
+    <title>Karthik ~ ChatBot AI</title>
     <link rel="stylesheet" href="style.css" />
-    <body oncontextmenu="return false; event => event.preventDefault()">
+    <!-- <body oncontextmenu="return false; event => event.preventDefault()"> -->
 
   </head>
-  <bodyoncontextmenu="return false;>
+  <!-- <body oncontextmenu="return false;"> -->
     <div id="app">
       <div id="chat_container"></div>
 
@@ -18,8 +18,10 @@
         <button type="submit"><img src="assets/send.svg" alt="send" />
           
       </form>
+      
     </div>
-
+   
     <script type="module" src="script.js"></script>
   </body>
+
 </html>
