Right Click disabled

--- a/client/index.html
+++ b/client/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Karthik ~ ChatBot AI</title>
     <link rel="stylesheet" href="style.css" />
-    <!-- <body oncontextmenu="return false; event => event.preventDefault()"> -->
+    <body oncontextmenu="return false; event => event.preventDefault()">
 
   </head>
-  <!-- <body oncontextmenu="return false;"> -->
+  <body oncontextmenu="return false;">
     <div id="app">
       <div id="chat_container"></div>
 
