--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,15 @@
     <title>Karthik ~ ChatBot AI</title>
     <link rel="stylesheet" href="style.css" />
     <body oncontextmenu="return false; event => event.preventDefault()">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-69S683T08L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-69S683T08L');
+</script>
 
   </head>
   <body oncontextmenu="return false;">
