--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
       </form>
       
     </div>
-   
+    <script type="text/javascript" src="widget.js"></script>
     <script type="module" src="script.js"></script>
   </body>
 
