--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
       <form>
         <textarea name="prompt" rows="1" cols="1" placeholder="Ask Karthik..."></textarea>
         <button type="submit"><img src="assets/send.svg" alt="send" />
+        <button type="Reset"><img src="reset.png" alt="Reset" />
           
       </form>
       
