--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
       <form>
         <textarea name="prompt" rows="1" cols="1" placeholder="Ask Karthik..."></textarea>
         <button type="submit"><img src="assets/send.svg" alt="send" />
-        <input type="reset"><img src="reset.png" alt="Reset" />
+        <input type="reset">
           
       </form>
       
