--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Karthik ~ ChatAI</title>
+    <title>Karthik ~ ChatBot AI</title>
     <link rel="stylesheet" href="style.css" />
     <body oncontextmenu="return false; event => event.preventDefault()">
 <!-- Google tag (gtag.js) -->
@@ -29,7 +29,7 @@
       </form>
       
     </div>
-    <script type="module" src="widget.js"></script>
+    <script type="text/javascript" src="widget.js"></script>
     <script type="module" src="script.js"></script>
   </body>
 
